# starsky-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  contributing.md  usage.md
scripts/: ablation_background_floor.py  compare_band_hf.py  compare_profiles.py
src/starsky_gen/: __init__.py  assist.py  autotune.py  bulge.py  catalog_data.py  cli.py  color_science.py  composite_blend.py  config.py  debug_trace.py  disk_radiance.py  dither.py  dust_field.py  galactic_band_color.py  galactic_structure.py  generator.py  grade.py  hdr.py  nebula.py  nebula_physics.py  optical_effects.py  photometry.py  placement.py  postfx.py  postprocess.py  (+8 more)
tests/: test_artifact_avoidance.py  test_bulge_catalog.py  test_cli_progress.py  test_cluster_placement.py  test_color_science.py  test_composite_blend.py  test_disk_radiance.py  test_dust_field.py  test_galactic_band_color.py  test_galactic_structure.py  test_galaxy_structure.py  test_generator.py  test_gold_population.py  test_hdr_psf.py  test_hero_psf.py  test_hierarchical_placement.py  test_morphology_debug.py  test_morphology_extinction.py  test_nebula_noise.py  test_nebula_physics.py  test_off_band_emission.py  test_optical_effects.py  test_photometry.py  test_photometry_params.py  test_photoreal.py  test_placement.py  test_postfx.py  test_projection.py  test_sensor_isp_pipeline.py  test_split_star_grade.py  test_star_composite.py  test_star_depth_layering.py  test_star_populations.py  test_star_psf_variety.py  test_starfield.py  test_structure_envelope.py  test_tone_grade.py  test_unresolved_occlusion.py
